syntax = "proto3";

package sonar;

import "google/protobuf/empty.proto";
import "google/protobuf/duration.proto";
import "google/protobuf/timestamp.proto";
import "google/protobuf/field_mask.proto";

service SonarService {
	rpc UserList(UserListRequest) returns (UserListResponse);
	rpc UserCreate(UserCreateRequest) returns (User);
	rpc UserUpdate(UserUpdateRequest) returns (User);
	rpc UserDelete(UserDeleteRequest) returns (google.protobuf.Empty);

	rpc ImageCreate(ImageCreateRequest) returns (ImageCreateResponse);
	rpc ImageDelete(ImageDeleteRequest) returns (google.protobuf.Empty);
	rpc ImageDownload(ImageDownloadRequest) returns (ImageDownloadResponse);

	rpc ArtistList(ArtistListRequest) returns (ArtistListResponse);
	rpc ArtistCreate(ArtistCreateRequest) returns (Artist);
	rpc ArtistUpdate(ArtistUpdateRequest) returns (Artist);
	rpc ArtistDelete(ArtistDeleteRequest) returns (google.protobuf.Empty);

	rpc Import(stream ImportRequest) returns (Track);
}

message Property {
	string key = 1;
	string value = 2;
}

message PropertyUpdate {
	string key = 1;
	optional string value = 2;
}

message User {
	uint32 user_id = 1;
	string username = 2;
	optional uint32 avatar = 3;
}

message UserListRequest {
	optional uint32 offset = 1;
	optional uint32 count = 2;
}

message UserListResponse {
	repeated User users = 1;
}

message UserCreateRequest {
	string username = 1;
	string password = 2;
	optional uint32 avatar = 3;
}

message UserUpdateRequest {
	uint32 user_id = 1;
	optional string password = 2;
	optional uint32 avatar = 3;
}

message UserDeleteRequest {
	uint32 user_id = 1;
}

message ImageCreateRequest {
	bytes content = 1;
}

message ImageCreateResponse {
	uint32 image_id = 1;
}

message ImageDeleteRequest {
	uint32 image_id = 1;
}

message ImageDownloadRequest {
	uint32 image_id = 1;
}

message ImageDownloadResponse {
	uint32 image_id = 1;
	bytes content = 2;
}

message Artist {
	uint32 id = 1;
	string name = 2;
	uint32 album_count = 3;
	uint32 listen_count = 4;
	optional uint32 coverart = 5; 
	repeated Property properties = 6;
}

message ArtistListRequest {
	optional uint32 offset = 1;
	optional uint32 count = 2;
}

message ArtistListResponse {
	repeated Artist artists = 1;
}

message ArtistCreateRequest {
	string name = 1;
	optional uint32 coverart = 2;
	repeated Property properties = 3;
}

message ArtistDeleteRequest {
	uint32 artist = 1;	
}

message ArtistUpdateRequest {
	uint32 artist = 1;
	optional string name = 2;
	repeated PropertyUpdate properties = 3;
	google.protobuf.FieldMask mask = 4;
}

message Album {
	uint32 id = 1;
	string name = 2;
	uint32 track_count = 3;
	google.protobuf.Duration duration = 4;
	uint32 listen_count = 5;
	repeated uint32 artists = 6;
	optional uint32 coverart = 7;
	repeated Property properties = 8;
}

message Track {
	uint32 id = 1;
	string name = 2;
	uint32 artist_id = 3;
	uint32 album_id = 4;
	google.protobuf.Duration duration = 5;
	uint32 listen_count = 6;
	optional uint32 cover_art_id = 7;
	repeated Property properties = 8;
}

message Playlist {
	uint32 id = 1;
	string name = 2;
	uint32 user = 3;
	uint32 track_count = 4;
	google.protobuf.Duration duration = 5;
	optional uint32 coverart = 6;
	repeated Property properties = 7;
}

message Scrobble {
	uint32 id = 1;
	uint32 track = 2;
	uint32 user = 3;
	google.protobuf.Duration duration = 4;
	google.protobuf.Timestamp timestamp = 5;
	repeated Property properties = 6;
}

message ImportRequest {
	bytes chunk = 1;
	optional string filepath = 2;
	optional uint32 artist_id = 3;
	optional uint32 album_id = 4;
}
